Bugfix: vertical lists now detect when overflown

--- a/src/App.css
+++ b/src/App.css
@@ -225,6 +225,10 @@ ul.vertical {
 ul.horizontal {
 }
 
+ul.overflown {
+  justify-content: flex-start;
+}
+
 .cardlist {
   min-height: 50px;
 }
